--- a/qrcode.html
+++ b/qrcode.html
@@ -51,7 +51,7 @@
     </div>
     </div>
     <div class="text-center mt-4">
-       
+        <h5 id="status"></h5>
       </div>
       
     <script src="./index.js"></script>
